<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ListCustomer"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_list_customer" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/addCustomer" />
        <item
            android:id="@+id/nav_gas"
            android:icon="@drawable/ic_gas"
            android:title="@string/gas" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings" />
    </group>
</menu>